@@ -1,3 +1,8 @@
+2006-11-23  Dirk Göttel <dgoettel@freenet.de>
+
+	* data/gnome-commander.ebuild:
+	Updated ebuild file for gentoo systems
+
 2006-11-22  <petr.pisar@atlas.cz>
 
 	* src/utils.c:
